[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ah_session_data"
version = "1.0.0"
description = "Session data temporarily added to each message, with key-value commands to manipulate it."
requires-python = ">=3.7"
dependencies = ["tzlocal"]

